@@ -2,11 +2,10 @@
 
 include config.mak
 
-HEADERS = algorithms.h byte_order.h plug_openssl.h rhash.h rhash_timing.h rhash_torrent.h aich.h blake2b.h blake2s.h crc32.h ed2k.h edonr.h hex.h md4.h md5.h sha1.h sha256.h sha512.h sha3.h ripemd-160.h gost12.h gost94.h has160.h snefru.h tiger.h tth.h torrent.h ustd.h util.h whirlpool.h
-SOURCES = algorithms.c byte_order.c plug_openssl.c rhash.c rhash_timing.c rhash_torrent.c aich.c blake2b.c blake2s.c crc32.c ed2k.c edonr.c hex.c md4.c md5.c sha1.c sha256.c sha512.c sha3.c ripemd-160.c gost12.c gost94.c has160.c snefru.c tiger.c tiger_sbox.c tth.c torrent.c util.c whirlpool.c whirlpool_sbox.c
+HEADERS = algorithms.h byte_order.h plug_openssl.h rhash.h rhash_torrent.h aich.h blake2b.h blake2s.h crc32.h ed2k.h edonr.h hex.h md4.h md5.h sha1.h sha256.h sha512.h sha3.h ripemd-160.h gost12.h gost94.h has160.h snefru.h tiger.h tth.h torrent.h ustd.h util.h whirlpool.h
+SOURCES = algorithms.c byte_order.c plug_openssl.c rhash.c rhash_torrent.c aich.c blake2b.c blake2s.c crc32.c ed2k.c edonr.c hex.c md4.c md5.c sha1.c sha256.c sha512.c sha3.c ripemd-160.c gost12.c gost94.c has160.c snefru.c tiger.c tiger_sbox.c tth.c torrent.c util.c whirlpool.c whirlpool_sbox.c
 OBJECTS = $(SOURCES:.c=.o)
 LIB_HEADERS = rhash.h rhash_torrent.h
-SO_HEADERS = $(LIB_HEADERS) $(LEGACY_HEADERS)
 TEST_STATIC = test_static$(EXEC_EXT)
 TEST_SHARED = test_shared$(EXEC_EXT)
 INSTALL_DATA = $(INSTALL) -m 644
@@ -116,9 +115,6 @@ rhash.o: rhash.c byte_order.h ustd.h algorithms.h rhash.h torrent.h \
  sha1.h plug_openssl.h util.h hex.h
 	$(CC) -c $(CFLAGS) $(VERSION_CFLAGS) $< -o $@
 
-rhash_timing.o: rhash_timing.c byte_order.h ustd.h rhash.h rhash_timing.h
-	$(CC) -c $(CFLAGS) $< -o $@
-
 rhash_torrent.o: rhash_torrent.c algorithms.h rhash.h byte_order.h ustd.h \
  torrent.h sha1.h rhash_torrent.h
 	$(CC) -c $(CFLAGS) $< -o $@
@@ -141,8 +137,11 @@ sha512.o: sha512.c byte_order.h ustd.h sha512.h
 snefru.o: snefru.c byte_order.h ustd.h snefru.h
 	$(CC) -c $(CFLAGS) $< -o $@
 
-test_lib.o: test_lib.c byte_order.h ustd.h rhash_timing.h \
- rhash_torrent.h rhash.h test_lib.h util.h
+test_lib.o: test_lib.c byte_order.h ustd.h rhash_torrent.h test_utils.h \
+ rhash.h test_lib.h util.h
+	$(CC) -c $(CFLAGS) $< -o $@
+
+test_utils.o: test_utils.c byte_order.h ustd.h rhash.h test_utils.h
 	$(CC) -c $(CFLAGS) $< -o $@
 
 tiger.o: tiger.c byte_order.h ustd.h tiger.h
@@ -168,9 +167,9 @@ whirlpool_sbox.o: whirlpool_sbox.c byte_order.h ustd.h
 	$(CC) -c $(CFLAGS) $< -o $@
 
 # build shared library
-$(EXPORTS_FILE): $(SO_HEADERS)
+$(EXPORTS_FILE): $(LIB_HEADERS)
 	sed -ne '1s/.*/{ global:/p; s/^RHASH_API.* \(rhash_[a-z0-9_]*\)(.*/  \1;/p; $$s/.*/local: *; };/p' \
-	  $(SO_HEADERS) | grep -v "$(EXPORTS_SKIP)" > $@
+	  $(LIB_HEADERS) | grep -v "$(EXPORTS_SKIP)" > $@
 
 $(LIBRHASH_SOLINK):
 	rm -f $(LIBRHASH_SOLINK)
@@ -185,11 +184,11 @@ $(LIBRHASH_STATIC): $(OBJECTS)
 	$(AR) -cqs $@ $(OBJECTS)
 
 # test targets
-$(TEST_SHARED): $(LIBRHASH_SHARED) test_lib.o
-	$(CC) $(CFLAGS) test_lib.o $(LIBRHASH_SHARED) $(LDFLAGS) -o $@
+$(TEST_SHARED): $(LIBRHASH_SHARED) test_lib.o test_utils.o
+	$(CC) $(CFLAGS) test_lib.o test_utils.o $(LIBRHASH_SHARED) $(LDFLAGS) -o $@
 
-$(TEST_STATIC): $(LIBRHASH_STATIC) test_lib.o
-	$(CC) $(CFLAGS) test_lib.o $(LIBRHASH_STATIC) $(BIN_STATIC_LDFLAGS) -o $@
+$(TEST_STATIC): $(LIBRHASH_STATIC) test_lib.o test_utils.o
+	$(CC) $(CFLAGS) test_lib.o test_utils.o $(LIBRHASH_STATIC) $(BIN_STATIC_LDFLAGS) -o $@
 
 test: $(TEST_TARGETS)
 test-static: $(TEST_STATIC)
